# MightyOak

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Template.cpp  Template.hpp  Test_Template.cpp
Ag/SymbolPackager/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  GnuMapFileReader.cpp  GnuMapFileReader.hpp  GnuNmFileReader.cpp  GnuNmFileReader.hpp  LineTokeniser.cpp  LineTokeniser.hpp  Main.cpp  MsMapFileReader.cpp  MsMapFileReader.hpp  PdbFileReader.cpp  PdbFileReader.hpp  SymbolDb.cpp  SymbolDb.hpp  SymbolFileReader.cpp  SymbolFileReader.hpp  Utils.cpp  Utils.hpp
ArmDebugger/: Breakpoint.hpp  CMakeLists.txt  CommandLineOptions.cpp  CommandLineOptions.hpp  Resource.h  (+11 more)
ArmEmu/: ARMv2CoreRegisterFile.inl  ARMv2InstructionDecoder.inl  AcornKeyboardController.cpp  AddressMap.cpp  AluInstructions.inl  AluOperations.h  AluOperations_Linux_x64.S  AluOperations_NoArch.cpp  AluOperations_Win32_x64.asm  ArithmeticLogicUnit.cpp  ArithmeticLogicUnit.hpp  ArmCore.cpp  ArmCore.hpp  ArmEmu.cpp  ArmSystem.cpp  ArmSystem.inl  ArmSystemBuilder.cpp  CMakeLists.txt  DataTransfer.cpp  DataTransfer.hpp  DataTransferInstructions.inl  EmuOptions.cpp  EmuPerfTest_Main.cpp  ExecutionMetrics.cpp  ExecutionUnit.inl  GuestEventQueue.cpp  Hardware.cpp  Hardware.hpp  Hardware.inl  IOC.cpp  InstructionDecoder.inl  InstructionDecoding.txt  InstructionPipeline.cpp  InstructionPipeline.hpp  InstructionPipeline.inl  IrqSink.hpp  MemcHardware.cpp  MemcHardware.hpp  NextSteps.txt  RegisterFile.cpp  (+27 more)
ArmEmu/Test/: LoggerDevice.cpp  LoggerDevice.hpp  TestConstraints.hpp  TestExecTools.cpp  TestExecTools.hpp  TestTools.cpp  TestTools.hpp  Test_ALU.cpp  Test_AluOperations.cpp  Test_ArmSystemBuilder.cpp  Test_CoProcessor.cpp  Test_Constraints.cpp  Test_Core.cpp  Test_DataTransfer.cpp  Test_Main.cpp  Test_MemcHardware.cpp  Test_Options.cpp  Test_RegisterFile.cpp  Test_Template.cpp
Source/: CMakeLists.txt
Source/Ag/: CMakeLists.txt
Source/Ag/Core/: ByteOrder.cpp  CMakeLists.txt  CodePoint.cpp  CommandLineSchema.cpp  CoreInternal.cpp  ErrorGuard.cpp  FsPathSchema.cpp  FsPathSchema.hpp  FsSearchPathList.cpp  InlineMemory.cpp  Memory.cpp  PosixAPI.hpp  StackTrace.cpp  StringPrivate.cpp  StringPrivate.hpp  Template.hpp  Test_App.cpp  Test_EnumInfo.cpp  Test_Exception.cpp  Test_FileSystem.cpp  Test_LinearSortedSet.cpp  Test_StackTrace.cpp  Test_Timer.cpp  Test_Utils.cpp  Test_Version.cpp  VariantType.cpp  Win32API.hpp  cpp.hint
Source/Ag/Core/Doc/: CodePoint.inl  Main.inl
Source/Ag/Include/Ag/: Core.hpp  GTest_Core.hpp
Source/Ag/Include/Ag/Core/: App.hpp  CodePoint.hpp  CollectionTools.hpp  CommandLineSchema.hpp  Configuration.hpp  Exception.hpp  FsDirectory.hpp  InlineMemory.hpp  LinearSortedMap.hpp  StackTrace.hpp  Stream.hpp  String.hpp  Uri.hpp  Utf.hpp  Utils.hpp  VariantTypes.hpp
Source/Ag/Include/Ag/QtInterop/: Conversion.hpp
Source/Ag/QtInterop/: CMakeLists.txt  Conversion.cpp
Source/Ag/SymbolPackager/: CMakeLists.txt  CommandLine.hpp  GnuMapFileReader.hpp  GnuNmFileReader.hpp  LineTokeniser.hpp  Main.cpp  MsMapFileReader.cpp  MsMapFileReader.hpp  PdbFileReader.cpp  PdbFileReader.hpp  SymbolDb.cpp  SymbolDb.hpp  SymbolFileReader.cpp  SymbolFileReader.hpp  Utils.cpp
Source/Ag/cmake/: ConfigureBuild.cmake  GenerateData.cmake.in  GenerateText.cmake.in  StaticData.cpp.in  StaticData.hpp.in  Utilities.cmake  Win32Version.h.in
Source/ArmDebugger/: ActionManager.cpp  ActionManager.hpp  Breakpoint.cpp  CMakeLists.txt  DebuggerActions.hpp  DebuggerApp.cpp  DebuggerWindow.cpp  DebuggerWindow.hpp  EmulatorSession.cpp  EmulatorSession.hpp  Main.cpp  MemcIOAdapter.hpp  Template.cpp  Template.hpp  Tools.cpp
Source/ArmDebugger/Annotations/: Annotation.hpp  AssemblyLabel.hpp  DataReplacement.cpp  InstructionFormat.cpp  InstructionFormat.hpp  Template.cpp  Template.hpp  TypeOverride.cpp  TypeOverride.hpp
Source/ArmDebugger/UI/: AboutDialog.hpp  AboutDialog.ui  DataBlockView.cpp  DataBlockView.hpp  EditDisplayOptionsDialog.hpp  EditDisplayOptionsDialog.ui  EditOrdinalMappingDialog.cpp  EditOrdinalMappingDialog.ui  MemoryBlockView.hpp  MemoryViewBar.cpp  MemoryViewWidget.hpp  NewSessionDialog.ui  OutputViewWidget.cpp  RegisterViewWidget.hpp  RegisterViewWidget.ui  UniformBlockView.cpp  UnmappedBlockView.cpp
Source/ArmEmu/: AcornKeyboardController.cpp  AcornKeyboardController.hpp  AluInstructions.inl  AluOperations.h  AluOperations_NoArch.cpp  ArmCore.hpp  ArmSystem.inl  CMakeLists.txt  DataTransferInstructions.inl  ExecutionMetrics.cpp  ExecutionUnit.inl  GuestEventQueue.cpp  IrqSink.hpp  MemcHardware.cpp  SystemConfigurations.inl  SystemContext.cpp  Template.cpp  Template.hpp  TestBedHardware.inl  VIDC10.cpp
Source/ArmEmu/Test/: TestConstraints.hpp  TestExecTools.hpp  Test_ALU.cpp  Test_ArmSystemBuilder.cpp  Test_CoProcessor.cpp  Test_Core.cpp  Test_DataTransfer.cpp  Test_GuestEventQueue.cpp  Test_MemcHardware.cpp  Test_MemcSystem.cpp  Test_RegisterFile.cpp  Test_Template.cpp
Source/AsmTools/: AddressDirectiveNode.hpp  AddressOperandNode.hpp  AluInstructionNode.hpp  AsmTools.cpp  Assembly.cpp  AssemblyDirectiveStatement.cpp  AssemblyDirectiveStatement.hpp  AtomicSwapInstructionNode.cpp  AtomicSwapInstructionNode.hpp  BaseSyntaxNode.cpp  BaseSyntaxNode.hpp  CMakeLists.txt  CoProcInstructionStatements.cpp  ConstantSet.hpp  DataTransferInstructionNode.hpp  Disassembly.cpp  Disassembly.hpp  Expr.cpp  Expr.hpp  ExpressionNode.cpp  FormatInstruction.cpp  FormatInstruction.hpp  IncludeStatement.cpp  InputContext.hpp  InputSet.hpp  InstructionStatement.cpp  LabelStatement.hpp  LexicalAnalysers.cpp  MultiTransferInstructionNode.hpp  ObjectCodeBuilder.hpp  ParseContext.hpp  Parser.hpp  RegisterListNode.hpp  ShifterOperandNode.cpp  ShifterOperandNode.hpp  SimpleInstructionStatements.cpp  Statement.cpp  StatementListNode.hpp  SymbolTable.hpp  TestTools.cpp  (+8 more)
Source/Include/ArmEmu/: EmuOptions.hpp  GuestEventQueue.hpp  HostMessageID.hpp  IKeyboardController.hpp  IOC.hpp  VIDC10.hpp
Source/Include/AsmTools/: InstructionInfo.hpp  Messages.hpp  Options.hpp
Source/ReaderWriterQueue/: CMakeLists.txt  Sources.txt
(+365 files in other folders)
